--- a/Task7/favTeams.html
+++ b/Task7/favTeams.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Favourite Teams</h1>
-        <h2>India</h2>
+        <h2>Cricket</h2>
         <ul>
             <li>India</li>
             <li>New Zealand</li>
